# loco-llm

./: .commit-msg.tmp  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  paths.yaml  pyproject.toml  release-please-config.json  requirements.md  requirements.yaml  specs.md
.cursor/rules/: conventional-commits.mdc  git-workflow.mdc
.github/workflows/: api-contract-check.yml  ci.yml  dashboard-tests.yml  publish.yml  release-please.yml
benchmarks/stub-bench/: README.md  bench.yaml  run.sh
configs/: llamacpp__thebloke-tinyllama-1.1b-chat-v1.0__tinyllama-1.1b-chat-v1.0.q4-k-m__default.yaml  llamacpp__unsloth-qwen3.6-35b-a3b__ud-q4-k-xl__default.yaml  stub-runtime__default.yaml  stub-runtime__stub-model__default.yaml
dashboard/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
dashboard/scripts/: check-bundle-size.mjs
dashboard/src/: main.tsx  router.tsx  store.ts
docs/: ARCHITECTURE.md  CI.md  CLI.md  DASHBOARD-SECURITY.md  DASHBOARD.md  DEVELOPMENT.md  GLOSSARY.md  INSTALLATION.md  LLM-SETUP-UX-AUDIT.md  README.md  RELEASE.md  RELEASE_SETUP.md  UPDATE.md  add-a-benchmark.md  add-a-config.md  add-a-model.md  add-a-recommendation.md  add-a-runtime.md  cli-ux-review.md  lifecycle.md  repo-conventions.md  runtime-lifecycle.md  wizards.md  wsl-setup.md
docs/reviews/: 2026-05-18-full-project-review.md
models/stub-model/: README.md  manifest.yaml  pull.sh
runtimes/llamacpp/: _serve_flags.sh  build.sh  healthcheck.sh  manifest.yaml  params.yaml  serve.sh  verify.sh
runtimes/stub-runtime/: README.md  build.sh  healthcheck.sh  manifest.yaml  serve.sh
runtimes/vllm/: README.md  _serve_flags.sh  build.sh  healthcheck.sh  manifest.yaml  params.yaml  serve.sh  verify.sh
scripts/: check_release_versions.py  ci-test-native-wsl.sh  ci-test-pr-merge.sh  ci-test.sh  install-dev.sh  install.sh  migrate-from-v0.2.sh  migrate_legacy_models.sh  refresh_dashboard_marker.py  regen-api-client.sh  ux-walkthrough.sh  workflow_rerun_api.sh
src/llm_cli/: __init__.py  __main__.py  main.py
tests/: cli_helpers.py  conftest.py
tests/integration/: test_cli_advisor.py  test_cli_config_new.py  test_cli_config_setup.py  test_cli_doctor.py  test_cli_help.py  test_cli_init.py  test_cli_lifecycle.py  test_cli_milestone2.py  test_cli_model.py  test_cli_runtime.py  test_cli_runtime_setup.py  test_cli_serve.py  test_cli_settings.py  test_cli_setup.py  test_cli_setup_chain.py  test_cli_specs.py  test_cli_systemd.py  test_cli_vllm_runtime.py  test_metrics_scrape_lifecycle.py  test_tui_config_setup.py  test_tui_runtime_install.py  test_tui_runtime_setup.py
tests/tui/: __init__.py  keys.py  seed.py  session.py  workflows.py
tests/unit/: test_chain.py  test_cli_dashboard.py  test_cli_dashboard_insecure.py  test_config_resolve.py  test_core_dashboard.py  test_core_disk.py  test_core_jobs.py  test_core_metrics.py  test_doctor_check.py  test_doctor_dashboard_insecure.py  test_doctor_dashboard_scope.py  test_doctor_render.py  test_doctor_runtime_scope.py  test_editable_install.py  test_hf_client.py  test_hf_url.py  test_install_record.py  test_lifecycle.py  test_llamacpp_catalog.py  test_model_bindings.py  test_model_registry.py  test_model_resolve.py  test_param_grid.py  test_param_grid_build.py  test_param_grid_layout.py  test_param_grid_plain.py  test_param_grid_save.py  test_param_grid_theme.py  test_params.py  test_paths.py  test_recommendations.py  test_registry.py  test_registry_merged.py  test_release_config.py  test_repo.py  test_scaffold.py  test_scaffold_drift.py  test_scaffold_home.py  test_scaffold_update.py  test_serve_diagnostics.py  (+18 more)
tests/webapi/: conftest.py  test_dashboard_security_doc.py  test_errors.py  test_middleware.py  test_routes_configs.py  test_routes_configs_mutations.py  test_routes_default_params.py  test_routes_disk.py  test_routes_doctor.py  test_routes_health_version.py  test_routes_history.py  test_routes_instance.py  test_routes_instance_chat.py  test_routes_instance_mutations.py  test_routes_jobs.py  test_routes_metrics.py  test_routes_models.py  test_routes_models_mutations.py  test_routes_overview.py  test_routes_recommendations.py  (+8 more)
(+242 files in other folders)
