[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localllm-cli"
version = "0.2.0"
description = "Personal control plane for local LLM runtimes"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.7",
    "questionary>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pexpect>=4.9; sys_platform != 'win32'",
]

[project.scripts]
llm = "llm_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "tui: PTY-driven TUI integration tests (Unix only)",
]
