[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loco-llm-cli"
version = "0.3.1"
description = "Personal control plane for local LLM runtimes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Melih Topcu" },
]
keywords = ["llm", "wsl", "vllm", "llama.cpp", "local"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12,<1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.7",
    "questionary>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/mtopcu1/local-llm-scaffold"
Repository = "https://github.com/mtopcu1/local-llm-scaffold"
Issues = "https://github.com/mtopcu1/local-llm-scaffold/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pexpect>=4.9; sys_platform != 'win32'",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
llm = "llm_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "tui: PTY-driven TUI integration tests (Unix only)",
]
