[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loco-llm-cli"
version = "1.3.0"
description = "Personal control plane for local LLM runtimes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Melih Topcu" },
]
keywords = ["llm", "wsl", "vllm", "llama.cpp", "local"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12,<1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.7",
    "questionary>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/mtopcu1/local-llm-scaffold"
Repository = "https://github.com/mtopcu1/local-llm-scaffold"
Issues = "https://github.com/mtopcu1/local-llm-scaffold/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pexpect>=4.9; sys_platform != 'win32'",
    "build>=1.0",
]
dashboard = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sse-starlette>=2.1,<3.0",
    "prometheus-client>=0.20,<1.0",
]

[project.scripts]
llm = "llm_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
markers = [
    "tui: PTY-driven TUI integration tests (Unix only)",
    "webapi: FastAPI dashboard backend tests",
]
